Fixed icons flickering while loading app.

--- a/src/styles/global/_angular.scss
+++ b/src/styles/global/_angular.scss
@@ -25,5 +25,5 @@
 [x-ng-cloak],
 .ng-cloak,
 .x-ng-cloak {
-  display: none;
+  display: none !important;
 }
